[gd_scene load_steps=81 format=3 uid="uid://cwx0ocumlauhb"]

[ext_resource type="Texture2D" uid="uid://c84qbro40nery" path="res://Art/CH/Cats/Cat-01-Anims.png" id="1_6s7c6"]
[ext_resource type="Script" path="res://GamePlay/Characters/Cat/cat.gd" id="1_ok6rl"]
[ext_resource type="Material" uid="uid://cgqjiy60hugld" path="res://GamePlay/Characters/Cat/cat_mat.tres" id="3_5klqg"]
[ext_resource type="Script" path="res://Team/Antonin/StateMachine/StateMachine.gd" id="3_y2gxi"]
[ext_resource type="Script" path="res://GamePlay/Characters/Cat/Idle.gd" id="4_0kl0i"]
[ext_resource type="Script" path="res://GamePlay/Characters/Cat/Running.gd" id="5_vcyxq"]
[ext_resource type="Script" path="res://GamePlay/Characters/Cat/Jumping.gd" id="6_uv7fp"]
[ext_resource type="Script" path="res://GamePlay/Characters/Cat/Sliding.gd" id="7_hqqud"]
[ext_resource type="Script" path="res://GamePlay/Characters/Cat/Falling.gd" id="8_36w51"]
[ext_resource type="Script" path="res://GamePlay/Characters/Cat/Hit.gd" id="9_sxs8b"]

[sub_resource type="AtlasTexture" id="AtlasTexture_f12fl"]
atlas = ExtResource("1_6s7c6")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rcuiy"]
atlas = ExtResource("1_6s7c6")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_17hsg"]
atlas = ExtResource("1_6s7c6")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tuwth"]
atlas = ExtResource("1_6s7c6")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_im8yv"]
atlas = ExtResource("1_6s7c6")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5qc0n"]
atlas = ExtResource("1_6s7c6")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7gf6d"]
atlas = ExtResource("1_6s7c6")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o1bpb"]
atlas = ExtResource("1_6s7c6")
region = Rect2(256, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5pwsy"]
atlas = ExtResource("1_6s7c6")
region = Rect2(320, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3vo0v"]
atlas = ExtResource("1_6s7c6")
region = Rect2(384, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dxnjt"]
atlas = ExtResource("1_6s7c6")
region = Rect2(448, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1tvbh"]
atlas = ExtResource("1_6s7c6")
region = Rect2(256, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tacwc"]
atlas = ExtResource("1_6s7c6")
region = Rect2(320, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_etdjf"]
atlas = ExtResource("1_6s7c6")
region = Rect2(384, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fm3bk"]
atlas = ExtResource("1_6s7c6")
region = Rect2(448, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_w2g7p"]
atlas = ExtResource("1_6s7c6")
region = Rect2(512, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b6gtu"]
atlas = ExtResource("1_6s7c6")
region = Rect2(0, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_brufb"]
atlas = ExtResource("1_6s7c6")
region = Rect2(64, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t0rvr"]
atlas = ExtResource("1_6s7c6")
region = Rect2(0, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gncjs"]
atlas = ExtResource("1_6s7c6")
region = Rect2(64, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dstk7"]
atlas = ExtResource("1_6s7c6")
region = Rect2(128, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8tod1"]
atlas = ExtResource("1_6s7c6")
region = Rect2(192, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qfvhj"]
atlas = ExtResource("1_6s7c6")
region = Rect2(0, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_istob"]
atlas = ExtResource("1_6s7c6")
region = Rect2(64, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p4ug8"]
atlas = ExtResource("1_6s7c6")
region = Rect2(128, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8bt86"]
atlas = ExtResource("1_6s7c6")
region = Rect2(512, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dcyhm"]
atlas = ExtResource("1_6s7c6")
region = Rect2(0, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t1460"]
atlas = ExtResource("1_6s7c6")
region = Rect2(64, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tqexb"]
atlas = ExtResource("1_6s7c6")
region = Rect2(128, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4fb7l"]
atlas = ExtResource("1_6s7c6")
region = Rect2(192, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jfq11"]
atlas = ExtResource("1_6s7c6")
region = Rect2(256, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yhj3u"]
atlas = ExtResource("1_6s7c6")
region = Rect2(320, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pr051"]
atlas = ExtResource("1_6s7c6")
region = Rect2(384, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6eg1y"]
atlas = ExtResource("1_6s7c6")
region = Rect2(320, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jdk0u"]
atlas = ExtResource("1_6s7c6")
region = Rect2(384, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ku756"]
atlas = ExtResource("1_6s7c6")
region = Rect2(448, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dbueu"]
atlas = ExtResource("1_6s7c6")
region = Rect2(512, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ek018"]
atlas = ExtResource("1_6s7c6")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rl5cx"]
atlas = ExtResource("1_6s7c6")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_e1gc1"]
atlas = ExtResource("1_6s7c6")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2h1ev"]
atlas = ExtResource("1_6s7c6")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_svlsh"]
atlas = ExtResource("1_6s7c6")
region = Rect2(320, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2684x"]
atlas = ExtResource("1_6s7c6")
region = Rect2(384, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rsf16"]
atlas = ExtResource("1_6s7c6")
region = Rect2(448, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0bs4i"]
atlas = ExtResource("1_6s7c6")
region = Rect2(512, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6kxqy"]
atlas = ExtResource("1_6s7c6")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jkwdm"]
atlas = ExtResource("1_6s7c6")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_025x1"]
atlas = ExtResource("1_6s7c6")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dku1l"]
atlas = ExtResource("1_6s7c6")
region = Rect2(192, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8gcem"]
atlas = ExtResource("1_6s7c6")
region = Rect2(256, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_k31rf"]
atlas = ExtResource("1_6s7c6")
region = Rect2(320, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5rgo7"]
atlas = ExtResource("1_6s7c6")
region = Rect2(384, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d3rjg"]
atlas = ExtResource("1_6s7c6")
region = Rect2(448, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_63xci"]
atlas = ExtResource("1_6s7c6")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3jvlm"]
atlas = ExtResource("1_6s7c6")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pp4nq"]
atlas = ExtResource("1_6s7c6")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_135h5"]
atlas = ExtResource("1_6s7c6")
region = Rect2(320, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_njx5i"]
atlas = ExtResource("1_6s7c6")
region = Rect2(384, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rdb86"]
atlas = ExtResource("1_6s7c6")
region = Rect2(448, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y2ykg"]
atlas = ExtResource("1_6s7c6")
region = Rect2(512, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oo5qo"]
atlas = ExtResource("1_6s7c6")
region = Rect2(320, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g4j4b"]
atlas = ExtResource("1_6s7c6")
region = Rect2(384, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jf0s6"]
atlas = ExtResource("1_6s7c6")
region = Rect2(448, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_odrfe"]
atlas = ExtResource("1_6s7c6")
region = Rect2(64, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_87w7m"]
atlas = ExtResource("1_6s7c6")
region = Rect2(128, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kphk0"]
atlas = ExtResource("1_6s7c6")
region = Rect2(192, 512, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_bfegm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f12fl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rcuiy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_17hsg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tuwth")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_im8yv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5qc0n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7gf6d")
}],
"loop": true,
"name": &"Crouch_Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o1bpb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5pwsy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3vo0v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dxnjt")
}],
"loop": false,
"name": &"Dash",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1tvbh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tacwc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_etdjf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fm3bk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w2g7p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b6gtu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_brufb")
}],
"loop": false,
"name": &"Death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t0rvr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gncjs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dstk7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8tod1")
}],
"loop": true,
"name": &"Fall",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qfvhj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_istob")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p4ug8")
}],
"loop": false,
"name": &"Hit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8bt86")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dcyhm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t1460")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tqexb")
}],
"loop": false,
"name": &"Jump",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4fb7l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jfq11")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yhj3u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pr051")
}],
"loop": true,
"name": &"Run",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6eg1y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jdk0u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ku756")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dbueu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ek018")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rl5cx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e1gc1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2h1ev")
}],
"loop": true,
"name": &"Sit_Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_svlsh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2684x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rsf16")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0bs4i")
}],
"loop": true,
"name": &"Slide",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6kxqy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jkwdm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_025x1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dku1l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8gcem")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k31rf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5rgo7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d3rjg")
}],
"loop": true,
"name": &"Stand_Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_63xci")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3jvlm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pp4nq")
}],
"loop": false,
"name": &"TR_Crouch_Sit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_135h5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_njx5i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rdb86")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y2ykg")
}],
"loop": false,
"name": &"TR_Sit_Crouch",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oo5qo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g4j4b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jf0s6")
}],
"loop": false,
"name": &"TR_Sit_Stand",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_odrfe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_87w7m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kphk0")
}],
"loop": false,
"name": &"TR_Stand_Sit",
"speed": 5.0
}]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_1ws1y"]
radius = 0.230162
height = 0.615

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_uj45d"]
radius = 0.0932338
height = 0.6

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_2447e"]
radius = 0.176054
height = 0.615

[node name="Cat" type="CharacterBody3D"]
collision_layer = 2
script = ExtResource("1_ok6rl")
lost_path_distance = 1.5
can_jump = null
can_slide = null

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0501059, 0.399838, 0)
material_override = ExtResource("3_5klqg")
pixel_size = 0.025
shaded = true
alpha_cut = 2
texture_filter = 0
sprite_frames = SubResource("SpriteFrames_bfegm")
animation = &"Stand_Idle"
autoplay = "Stand_Idle"

[node name="BaseCollision" type="CollisionShape3D" parent="."]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0.00251524, 0.230146, 0)
shape = SubResource("CapsuleShape3D_1ws1y")

[node name="SlideCollision" type="CollisionShape3D" parent="."]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, -0.00815576, 0.0930656, 0)
shape = SubResource("CapsuleShape3D_uj45d")
disabled = true

[node name="DebugLabel" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -346.0
offset_top = 15.0
offset_right = -25.0
offset_bottom = 62.0
grow_horizontal = 0

[node name="CeilingTrigger" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00296569, 0.195921, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="CeilingTrigger"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0.0871516, 0)
shape = SubResource("CapsuleShape3D_2447e")

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("3_y2gxi")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("4_0kl0i")

[node name="Running" type="Node" parent="StateMachine"]
script = ExtResource("5_vcyxq")

[node name="Jumping" type="Node" parent="StateMachine"]
script = ExtResource("6_uv7fp")

[node name="Sliding" type="Node" parent="StateMachine"]
script = ExtResource("7_hqqud")

[node name="Falling" type="Node" parent="StateMachine"]
script = ExtResource("8_36w51")

[node name="Hit" type="Node" parent="StateMachine"]
script = ExtResource("9_sxs8b")
